Course list can depend on login status
